--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:2368/assets/built/screen.css?v=bb2cc0bddc">
+    <link rel="stylesheet" type="text/css" href="/assets/built/screen.css?v=bb2cc0bddc">
 
     <meta name="description" content="The trouble is you think you have time.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -20,13 +20,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="jeekdong's Blog">
     <meta property="og:description" content="The trouble is you think you have time.">
-    <meta property="og:url" content="http://localhost:2368/">
-    <meta property="og:image" content="http://localhost:2368/content/images/2017/06/pexels-photo-90807-min.jpeg">
+    <meta property="og:url" content="/">
+    <meta property="og:image" content="/content/images/2017/06/pexels-photo-90807-min.jpeg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="jeekdong's Blog">
     <meta name="twitter:description" content="The trouble is you think you have time.">
-    <meta name="twitter:url" content="http://localhost:2368/">
-    <meta name="twitter:image" content="http://localhost:2368/content/images/2017/06/pexels-photo-90807-min.jpeg">
+    <meta name="twitter:url" content="/">
+    <meta name="twitter:image" content="/content/images/2017/06/pexels-photo-90807-min.jpeg">
     
     <script type="application/ld+json">
 {
@@ -37,22 +37,22 @@
         "name": "jeekdong&#x27;s Blog",
         "logo": {
             "@type": "ImageObject",
-            "url": "http://localhost:2368/favicon.ico",
+            "url": "/favicon.ico",
             "width": 60,
             "height": 60
         }
     },
-    "url": "http://localhost:2368/",
-    "image": "http://localhost:2368/content/images/2017/06/pexels-photo-90807-min.jpeg",
+    "url": "/",
+    "image": "/content/images/2017/06/pexels-photo-90807-min.jpeg",
     "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "http://localhost:2368/"
+        "@id": "/"
     },
     "description": "The trouble is you think you have time."
 }
     </script>
 
-    <script src="http://localhost:2368/public/ghost-sdk.js?v=bb2cc0bddc"></script>
+    <script src="/public/ghost-sdk.js?v=bb2cc0bddc"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -91,7 +91,7 @@ ghost.init({
     <div class="site-nav-right">
         <div class="social-links">
         </div>
-            <a class="rss-button" href="https://feedly.com/i/subscription/feed/http://localhost:2368/rss/" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><circle cx="6.18" cy="17.82" r="2.18"></circle><path d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"></path></svg>
+            <a class="rss-button" href="https://feedly.com/i/subscription/feed//rss/" target="_blank" rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><circle cx="6.18" cy="17.82" r="2.18"></circle><path d="M4 4.44v2.83c7.03 0 12.73 5.7 12.73 12.73h2.83c0-8.59-6.97-15.56-15.56-15.56zm0 5.66v2.83c3.9 0 7.07 3.17 7.07 7.07h2.83c0-5.47-4.43-9.9-9.9-9.9z"></path></svg>
 </a>
     </div>
 </nav>
@@ -1000,7 +1000,7 @@ ghost.init({
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="http://localhost:2368/assets/js/jquery.fitvids.js?v=bb2cc0bddc"></script>
+    <script type="text/javascript" src="/assets/js/jquery.fitvids.js?v=bb2cc0bddc"></script>
 
     <script>
         // maxPages is a global variable that is needed to determine
@@ -1008,7 +1008,7 @@ ghost.init({
         // we reached the last page already.
         var maxPages = parseInt('2');
     </script>
-    <script src="http://localhost:2368/assets/js/infinitescroll.js?v=bb2cc0bddc"></script>
+    <script src="/assets/js/infinitescroll.js?v=bb2cc0bddc"></script>
 
     
 
